public/stylesheets/style.css
/* ... */
.view-first p {
  transform: translateX(-300px);
  opacity: 0;
  transition: all 0.4s linear;
}
.view-first .href {
  transform: translateX(300px);
  opacity: 0;
  transition: all 0.4s ease-in-out;
}
.view-first:hover img {
	transform: scale(1);
      width: 80%;
}
.view-first:hover .mask {
	opacity: 1;
}
.view-first:hover h2,
.view-first:hover p,
.view-first:hover .href {
    opacity: 1;
    transform: translateY(0px);
    transform: translateX(0px);
}
.view-first:hover p {
    transition-delay: 0.1s;
}
.view-first:hover .href {
    transition-delay: 0.2s;
}
.view-first:hover h2 {
    transition-delay: 0.2s;
}

.text-align {
  padding-right: 20px;
  text-align: right;
}
#center-box {
  float: none;
  margin: auto;
}
.center-box2 {
  float: none;
  width: 50%;
  padding-bottom: 20px;
}

#center-box3 {
  left: 0;
  width: 85%;
  margin: auto;
}

.center-box4 {
  width: 96%;
  text-align: center;
}

.project {
  background: rgba(0,0,0,.7);
  float: left;
  width: 50%;
  position: relative;
  /* padding-bottom: 45px;
  padding-top: 45px; */
  padding: 45px;
  border-top: 1px solid rgba(255,255,255,0.3);
  border-bottom: 1px solid rgba(0,0,0,0.1);
}
.project2 {
  float: none;
  margin: 0 auto;
}

.project:after {
  content: "";
  display: table;
  clear: both;
}
/*.flexbox-item-grow*/
/*{*/
    /*flex: 1;  same as flex: 1 1 auto; */
/*}*/
.fa {
  font-size: 1.5em;
  color: #af0a0a; }

.fa:hover {
  color: white; }

footer {
  padding: 50px;
  float: left;
  width: 80%;
  color: white;
  background: black;
  opacity: .8;
  margin: 0 0 0 -40%;
  left: 50%;
  position: relative;
  bottom: 20px;
  top: 400px; }

footer li {
list-style: none;
}

.footer {
  top: 0;
}

.github {
  margin-left: 5px; }

.show {
  color: #114fe0;
  margin-left: 0;
  text-decoration: none;
  transition: 300ms ease all;
}

.show a {
  color: #114fe0; }

a:after {
  content: "";
  display: table;
  clear: both; }

.title {
  color: #114fe0;
  float: right;
  text-shadow: 1px 1px 2px white;
  font-size: 1.6em; }

.container {
  margin: 0 auto;
}

section.module:last-child {
  margin-bottom: 0; }

section.module p {
  margin-bottom: 10px;
  font-size: 16px;
  font-weight: 500;
}

section.module p:last-child {
  margin-bottom: 0; }

section.module.content {
  padding: 40px 0; }

section.module.parallax {
  height: 200px;
  background-position: 50% 50%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover; }

section.module.parallax-1 {
  /*background-image: url("/images/chicago_2048.jpg");*/
  background-image: url("/images/colorado-sunrise.jpg");
  /*background-image: url("/images/colorado2.jpg");*/
  /*background-image: url("/images/colorado-dallas.jpg");*/

}

/* section.module.parallax-2 {
  background-image: url("/images/ireland1_big.jpg");
}
section.module.parallax-1 {
  background-image: url("/images/ireland3_big.jpg");
}
 */
/*Animations*/
h1 {
  -webkit-animation-duration: 3s;
  -moz-animation-delay: 2s;
  /*    animation-iteration-count: ;
 */ }

/*  h2:hover {
  -webkit-animation-duration: 3s;
  -moz-animation-delay: 10s;
   animation-iteration-count: 3;
} */

svg {
  margin: 0 auto; }

/*.z-index {
  z-index: 10;
}*/
#square {
  z-index: -1; }

.hold {
  display: block;
  min-height: 500px; }

.black {
  color: black;
}

form {
  width: 100%;
  margin-top: 20px; }

textarea, input[type='text'] {
  margin: 20px;
  border: 1px solid #372248;
  transition: 300ms ease all;
  outline: none;
  padding: 20px;
  margin-bottom: 20px; }

textarea:focus, input[type='text']:focus {
  border: 1px solid #3F7D20; }

textarea {
  min-height: 250px; }

label {
  font-size: .9em;
  margin: 20px;
  font-weight: bold; }

.select {
  margin-left: 5px;
  margin-top: 10px; }

  a {
    display: block;
    float: left;
    border-radius: 5px;
    padding: 7px 10px;
    color: #af0a0a;
    text-decoration: none;
    transition: 300ms ease all;
  }
  p, ul li {
    /*color: white;*/
    color: #114fe0;
    color: rgba(0,53,131, .9);
    color: rgba(20, 81, 186, .9);
    /*float: left;*/
    /*width: 80%;*/
    /*margin-left: 50px;*/
    font-size: .9em;
    padding-left: 0px; }

.spacer{
   /*height:200px;*/
}

header {
  margin-top: 250px;
  text-align: center; }

header nav {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;
}

/* styling for dropdown navbar */
#navbar {
  background: rgba(255, 255, 255, .7);
	padding: 20px 50px;
}
#navbar ul {
    list-style-type:none;
    margin:0;
    padding:0;
}
#navbar ul li {
    display:inline-block;
    position:relative;
}

/* sub navigation */
#navbar li ul {
    background-color: rgba(175,10,10,.9);
    position:absolute;
    left:30px;
    top:40px; /* make this equal to the line-height of the links (specified below) */
    width:200px;
}
#navbar li li {
    position:relative;
    margin:0;
    display:block;
}
#navbar li li ul {
    position:absolute;
    top:0;
    left:200px; /* make this equal to the width of the sub nav above */
    margin:0;
    border: 3px solid yellow;
}

/* style all links */
#navbar a {
    line-height:40px;
    padding:0 10px;
    /*margin:0 12px;*/
    color: #af0a0a;
    text-decoration:none;
}

#navbar a:hover,
/*#navbar a:focus,*/
#navbar a:active {
    color: white;
    background: #114fe0;
    background: #3A4766;
    background: rgba(0,53,131, .7);
}

/* style sub level links */
#navbar li li a {
    border-bottom:solid 1px rgb(200,50,50);
    /*margin:0 10px;*/
    /*padding:0;*/
    width: 100%;
    text-align: left;
    color: white;
}
#navbar li li:last-child a {
    border-bottom:none;
}

/* hide sub menu links */
ul.sub-menu {
    display:none;
}

span {
  color: #af0a0a;
}
span:hover {
  color: white;
}
#navbar .fa {
  padding-left: 5px;
}
#navbar li {
  color: #af0a0a;
}
nav li, article li {
  list-style: none;
}

nav li:after {
  content: "";
  display: table;
  clear: both;
}
#navbar nav a {
  font-size: 1.1em;
  font-weight: 400;
  margin-left: 20px;
  display: block
}
/* ... */

